<resources>
    <string name="app_name" translatable="false">TrafimauApp</string>
    <string name="appDescription">This is the appEntity launcher made for MDS</string>
    <string name="greeting">Welcome!</string>
    <string name="authorImageContentDescription" translatable="false">Author image</string>
    <string name="appIconContentDescription" translatable="false">Application icon</string>

    <string name="themePickerLight">Light Theme</string>
    <string name="themePickerDark">Dark theme</string>

    <string name="layoutCompactName">Compact Layout</string>
    <string name="layoutStandardName">Standard Layout</string>
    <string name="layoutStandardDescription">
        Portrait: 4 icons in a row
        \nLandscape: 6 icons in a row
    </string>
    <string name="layoutCompactDescription">
        Portrait: 5 icons in a row
        \nLandscape: 7 icons in a row
    </string>
    <string name="author">Aliaksandr Trafimaŭ</string>
    <string name="color">Color</string>

    <string name="desktop">Desktop</string>
    <string name="gridLauncher">Grid</string>
    <string name="listLauncher">List</string>
    <string name="applications">Applications</string>
    <string name="settings">Settings</string>

    <string name="appDescription1">Here you can launch other applications installed on your phone</string>
    <string name="appDescription2">You can switch between Grid and List launcher modes and view authors profile or settings screen in navigation drawer</string>
    <string name="toggle_dark_theme">Toggle dark theme</string>
    <string name="layout">Layout</string>
    <string name="show_welcome_page_on_next_launch">Show Welcome Page on next launch</string>

    <string name="darkThemeDisabled">Dark theme disabled</string>
    <string name="darkThemeEnabled">Dark theme enabled</string>
    <string name="layoutPickerDialogTitle">Choose layout type</string>
    <string name="cancel">Cancel</string>
    <string name="navDrawerOpened" translatable="false">nav opened</string>
    <string name="navDrawerClosed" translatable="false">nav closed</string>
    <string name="add_new_item">Add new item</string>
    <string name="sitename_hint" translatable="false">sitename.com</string>
    <string name="enterTheSiteLink">Enter the site link</string>
    <string name="notifications">Notifications</string>
    <string name="send_push_notification">Simple push</string>
    <string name="simple_push_title">Simple push</string>
    <string name="simple_push_description">You have sent simple push</string>
    <string name="push_with_color_description">You have sent push with color</string>
    <string name="push_with_color_title">Colored push</string>

    <string name="notificationChannelId" translatable="false">TrafimauAppChannelId</string>
    <string name="notificationChannelName" translatable="false">TrafimauAppChannelName</string>
    <string name="notificationChannelDescription" translatable="false">TrafimauAppChannelDescription</string>
    <string name="send_push_with_color">Colored push</string>
    <string name="mobilePhoneNumber" translatable="false">(317) 535-1212</string>
    <string name="mobilePhone">Mobile phone</string>
    <string name="phoneIcon" translatable="false">phone icon</string>
    <string name="emailIcon" translatable="false">Email icon</string>
    <string name="email" translatable="false">cncntrt@gmail.com</string>
    <string name="email_label">Email</string>
    <string name="workPhoneNumber" translatable="false">(323) 529-0213</string>
    <string name="workPhone">Work phone</string>
    <string name="inspiringPlace">Inspiring place</string>
    <string name="inspiringPlaceLocation">Ancient Theatre, Delphi, Greece</string>
    <string name="github" translatable="false">Github</string>
    <string name="linkedIn" translatable="false">LinkedIn</string>
    <string name="githubProfile" translatable="false">yks72p</string>
    <string name="linkedInProfile" translatable="false">yks72p</string>
    <string name="workPhoneIcon" translatable="false">Work phone icon</string>
    <string name="githubIcon" translatable="false">Github icon</string>
    <string name="inspiring_place_icon" translatable="false">Inspiring place icon</string>
    <string name="karma_title">Improve my karma :)</string>
    <string name="karma_description">You can say \'Good Job\' and add +5 to my karma. Be aware that uncontrolled forces of nature (such as <b>Silent Pushes</b>) can change karma in any time</string>
    <string name="karma_icon" translatable="false">Karma icon</string>
    <string name="currentKarmaLabel">Current karma:</string>
    <string name="never">Never</string>
    <string name="last_change_by_nature">Last change by nature:</string>
    <string name="add">Add</string>
    <string name="enter_the_site_link">Enter the site link</string>
    <string name="launches">Launches:\u0020</string>
    <string name="information">Information</string>
    <string name="delete">Delete</string>
    <string name="view">View</string>
    <string name="sort">Sort</string>
    <string name="current_mode_desc_descr">Descending</string>
    <string name="current_mode_asc_descr">Ascending</string>
    <string name="toggle_asc_order">Toggle sort order</string>

    <string name="sort_mode">Sort mode</string>
    <string name="set_sort_by">Set sort by</string>

    <string name="set_sort_mode_dialog_by_name">Name</string>
    <string name="set_sort_mode_dialog_by_frequency">Frequency</string>
    <string name="set_sort_mode_dialog_installation_by_date">Installation date</string>
    <string name="no_sort">No sort</string>

    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_frequency">Sort by frequency</string>
    <string name="sort_by_installation_date">Sort by installation date</string>
    <string name="linked_in_icon" translatable="false">LinkedIn icon</string>

    <string name="choose_the_language">Choose the language</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="belarusian">Belarusian</string>
    <string name="russian">Russian</string>
    <string name="system_language">System language</string>

</resources>
