<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navDesktopFragment"
            android:checked="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/desktop" />
        <item
            android:id="@+id/navGridFragment"
            android:icon="@drawable/ic_grid_on_black_24dp"
            android:title="@string/gridLauncher" />
        <item
            android:id="@+id/navListFragment"
            android:icon="@drawable/ic_format_list_bulleted_black_24dp"
            android:title="@string/listLauncher" />
        <item
            android:id="@+id/navPreferencesFragment"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />

        <item
            android:title="@string/notifications">
            <menu>
                <item
                    android:id="@+id/sendSimplePush"
                    android:icon="@drawable/ic_notifications_active_black_24dp"
                    android:title="@string/send_push_notification" />
                <item
                    android:id="@+id/sendPushWithIcon"
                    android:icon="@drawable/ic_color_lens_black_24dp"
                    android:title="@string/send_push_with_color" />
            </menu>
        </item>
    </group>

</menu>