<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/profileImage"
        android:layout_height="@dimen/profileImage"
        android:contentDescription="@string/appIconContentDescription"
        android:src="@drawable/github_profile_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/largeOffset"
        android:text="@string/app_name"
        android:textSize="@dimen/welcomeMainText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/largeOffset"
        android:text="@string/greeting"
        android:textSize="@dimen/welcomeSecondaryText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/largeOffset"
        android:text="@string/appDescription"
        android:textSize="@dimen/welcomeSecondaryText" />

</LinearLayout>
