<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_above="@id/layoutPickerNextButton"
        android:layout_margin ="@dimen/offset"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/layoutPickerStandardBlock"
            style="@style/layoutPickerRadioButtonBlock"
            >

            <RadioButton
                android:id="@+id/layoutPickerStandardRadioButton"
                android:text="@string/layoutStandardName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/layoutPickerMainText"
                android:padding="@dimen/offset"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/layoutStandardDescription"
                android:textSize="@dimen/layoutPickerSecondaryText"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutPickerCompactBlock"
            style="@style/layoutPickerRadioButtonBlock"
            android:layout_marginTop="@dimen/offset"
            >

            <RadioButton
                android:id="@+id/layoutPickerCompactRadioButton"
                android:text="@string/layoutCompactName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/layoutPickerMainText"
                android:padding="@dimen/offset"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/layoutCompactDescription"
                android:textSize="@dimen/layoutPickerSecondaryText"
                />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/layoutPickerNextButton"
        style="@style/buttonNext"
        android:theme="@style/coloredAppCompatButton" />

</RelativeLayout>